fixed spacing
fixed spacing between menu options

--- a/public/css/weather_map.css
+++ b/public/css/weather_map.css
@@ -31,3 +31,7 @@ html {
     width: 100px;
     height: 100px;
 }
+
+li {
+    margin: .5em;
+}
